# UGR-IG

./: .gitignore
practica_1/: Makefile  user_code.cc  user_code.h
practica_1/code/: CMakeLists.txt  Makefile  objetos.cpp  practica1  practica1.cc  ui.cpp
practica_1/code/include/: objetos.h  ui.h
practica_1/code/src/: ui.cpp
practica_1/include/: objetos.h  ui.h
practica_1/src/: objetos.cpp  practica1.cpp  ui.cpp
practica_2/: CMakeLists.txt
practica_2/include/: objetos.h  ui.h
practica_2/modelos/small/: magnolia.ply  readme.txt  sgimonitor.ply
practica_2/src/: objetos.cpp  practica2.cpp  read_ply.cpp  ui.cpp
practica_3/include/: objetos.h  ui.h
practica_3/modelos/: c.ply
practica_3/src/: file_ply_stl.cpp  objetos.cpp  practica2.cpp  ui.cpp
practica_4/: CMakeLists.txt
practica_4/include/: objetos.h  ui.h  viModes.h
practica_4/modelos/: glock.ply
practica_4/modelos/big/: bunny.ply
practica_4/modelos/small/: airplane.ply  box.ply  shuttle.ply
practica_4/src/: file_ply_stl.cpp  objetos.cpp  practica2.cpp  ui.cpp
practica_5/: CMakeLists.txt
practica_5/include/: objetos.h  ui.h  viModes.h
practica_5/modelos/: p.ply
practica_5/modelos/small/: hydrant.ply  vw.ply
practica_5/src/: objetos.cpp  practica2.cpp  ui.cpp
